# adventofcode-work

2015/: d1  d10  d11  d12  d13  d14  d15  d16  d17  d18  d19  d2  d20  d21  d3  d4  d5  d6  d7  d8  d9
2015/spec/: d10_spec.rb  d11_spec.rb  d12_spec.rb  d13_spec.rb  d14_spec.rb  d15_spec.rb  d16_spec.rb  d17_spec.rb  d18_spec.rb  d19_spec.rb  d1_spec.rb  d20_spec.rb  d21_spec.rb  d2_spec.rb  d3_spec.rb  d4_spec.rb  d5_spec.rb  d6_spec.rb  d7_spec.rb  d8_spec.rb  d9_spec.rb
2019/: Cargo.toml
2019/src/: d1.rs  d10.rs  d12.rs  d13.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
2019/src/lib/: mod.rs
2019/src/lib/d1/: mod.rs
2019/src/lib/d10/: mod.rs
2019/src/lib/d12/: mod.rs
2019/src/lib/d13/: mod.rs
2019/src/lib/d2/: mod.rs
2019/src/lib/d3/: mod.rs
2019/src/lib/d4/: mod.rs
2019/src/lib/d6/: mod.rs
2019/src/lib/d7/: mod.rs
2019/src/lib/d8/: mod.rs
2024/: Cargo.toml
2024/src/: d1.rs
