[package]
name = "adventofcode"
version = "0.1.0"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]
edition = "2018"

[[bin]]
name = "d1"
path = "src/d1.rs"

[[bin]]
name = "d2"
path = "src/d2.rs"

[[bin]]
name = "d3"
path = "src/d3.rs"

[[bin]]
name = "d4"
path = "src/d4.rs"

[[bin]]
name = "d5"
path = "src/d5.rs"

[[bin]]
name = "d6"
path = "src/d6.rs"

[[bin]]
name = "d7"
path = "src/d7.rs"

[[bin]]
name = "d8"
path = "src/d8.rs"

[[bin]]
name = "d9"
path = "src/d9.rs"

[[bin]]
name = "d10"
path = "src/d10.rs"

[[bin]]
name = "d12"
path = "src/d12.rs"

[[bin]]
name = "d13"
path = "src/d13.rs"

[lib]
name = "adventofcode"
path = "src/lib/mod.rs"

[dependencies]
itertools = "0.8"
permutator = "0.1"
text_io = "0.1"
